--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     
     <title>Women in National Parliament</title>
   </head>
-  <body>
+  <body style="background-color:#36454f;">
+    
  <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/5a167c2f-a5dc-4cf6-9e58-19427399e2c7/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </body>
 </html>
