--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    
-    <title>Women in National Parliament</title>
+        <title>Women in National Parliament</title>
+    <style>body {
+  background-color: #333333;
+  padding: 20px;
+  font-family: Arial;
+}</style>
   </head>
   <body>
  <h1>Percentage of Women in National Parliaments from 2000 to 2020</h1>
