--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
         <title>Women in National Parliament</title>
-    <style>body {
+    <style>
+  body {
   background-color: #333333;
-  padding: 20px;
-  font-family: Arial;
 }</style>
   </head>
   <body>
