--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Women in National Parliament</title>
     <style>
   body {
-  background-color: #333333;
+  background-color: #bdbdbd;
 }</style>
   </head>
   <body>
