--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
  <h1>Percentage of Women in National Parliaments from 2000 to 2020</h1>
  <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/5a167c2f-a5dc-4cf6-9e58-19427399e2c7/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+  
+  <img src="framework.png" alt="Methodology Framework">
+<img src="projectdatabase.png" alt="Project Database">
   </body>
   
   <footer>
