--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
  <h1>Percentage of Women in National Parliaments from 2000 to 2020</h1>
  <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/5a167c2f-a5dc-4cf6-9e58-19427399e2c7/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   
+    <h2>Project Objectives</h2>   
+  <ol>
+<li>
+<p>Develop a web application displaying the change over time of women in national parliaments.</p>
+</li>
+<li>
+<p>Identify any patterns in the data.</p>
+</li>
+</ol>
+        <h2>Methodology Framework</h2>   
   <img src="framework.png" alt="Methodology Framework">
+        <h2>Project Database</h2>   
 <img src="projectdatabase.png" alt="Project Database">
   </body>
   
