--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Project Objectives</h2>   
   <ol>
 <li>
-<p>Develop a web application displaying the change over time of women in national parliaments.</p>
+<p>Collect open-source data and develop a web application displaying the change over time of women in national parliaments.</p>
 </li>
 <li>
 <p>Identify any patterns in the data.</p>
