--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </li>
 </ol>
         <h2>Methodology Framework</h2>   
-  <img src="framework.png" alt="Methodology Framework">
+  <img src="images/framework.png" alt="Methodology Framework">
         <h2>Project Database</h2>   
-<img src="projectdatabase.png" alt="Project Database">
+<img src="images/projectdatabase.png" alt="Project Database">
   </body>
   
   <footer>
