--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </li>
 </ol>
         <h2>Methodology Framework</h2>   
-  <img src="images/framework.png" alt="Methodology Framework">
+  <img src="images/framework2.png" alt="Methodology Framework">
         <h2>Project Database</h2>   
 <img src="images/projectdatabase.png" alt="Project Database">
   </body>
