--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>James Davis Portfolio</title>
-  <link rel="stylesheet" href="indexcss.css">
+  <link rel="stylesheet" href="css/indexcss.css">
 
 
 </head>
