--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="content">
       <a href="womenparliament.html"><img src="images/wonatdisplay.png" alt="Map Image" style="width:100%"></a>
       <h3>Women in National Parliament</h3>
-      <p>Web Mapping Project of the percentage of women in national parliament from 2000 to 2020</p>
+      <p>Web mapping project of the percentage of women in national parliament from 2000 to 2020</p>
     </div>
   </div>
   <div class="column">
