--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <div class="content">
       <a href="womenparliament.html"><img src="images/wonatdisplay.png" alt="Map Image" style="width:100%"></a>
       <h3>Women in National Parliament</h3>
-      <p>Web mapping project of the percentage of women in national parliament from 2000 to 2020</p>
+      <p>Web mapping project of the percentage of women in national parliament from 2000 to 2020.</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
-    <img src="/w3images/lights.jpg" alt="" style="width:100%">
-      <h3></h3>
-      <p></p>
+    <img src="images/posterdp.png" alt="Project Poster" style="width:100%">
+      <h3>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h3>
+      <p>University honours project using RapidEye satellite imagery to create a land cover classification and burrow habitat suitability model.</p>
     </div>
   </div>
   
