--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
   <div class="column">
     <div class="content">
-    <img src="images/posterdp.png" alt="Project Poster" style="width:100%">
+    <a href="researchproject.html"><img src="images/posterdp.png" alt="Project Poster" style="width:100%"></a>
       <h3>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h3>
       <p>University honours project using RapidEye satellite imagery to create a land cover classification and burrow habitat suitability model.</p>
     </div>
