--- a/womenparliament.html
+++ b/womenparliament.html
@@ -6,11 +6,12 @@
 
   </head>
   <body>
- <h2>Percentage of Women in National Parliaments from 2000 to 2020</h2>
+ <h2>Proportion of Women in National Parliaments from 2000 to 2020</h2>
  <div class="content">
  <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/5a167c2f-a5dc-4cf6-9e58-19427399e2c7/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </div>
     </br>
+   <h2>Overall Change Bewteen 2000 and 2020</h2>
   <div class="content">
 <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/21be8a68-52a6-473a-bce3-e36675506b69/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </div>
@@ -20,10 +21,10 @@
 <h2>Project Objectives</h2>   
   <ol>
 <li>
-<p>Collect open-source data and develop a web application displaying the change over time of women in national parliaments.</p>
+<p>To collect open-source data regarding women in national parliaments and create a spatial database using PostGIS.</p>
 </li>
 <li>
-<p>Identify any patterns in the data.</p>
+<p>To construct an accessible web map to visualise the change over time of women in national parliaments.</p>
 </li>
 </ol>
 </div>
