--- a/womenparliament.html
+++ b/womenparliament.html
@@ -16,6 +16,16 @@
 <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/21be8a68-52a6-473a-bce3-e36675506b69/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </div>
   </br>
+<div class="content">
+        <h2>Year 2000 Spatial Distribution</h2>   
+  <img src="images/2000inter.png" alt="Year 2000 Spatial Distribution">
+  </div>
+  </br>
+<div class="content">
+        <h2>Year 2020 Spatial Distribution</h2>   
+  <img src="images/2020inter.png" alt="Year 2020 Spatial Distribution">
+  </div>
+</br>
 
 <div class="content">    
 <h2>Project Objectives</h2>   
