--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   <img src="/w3images/p3.jpg" alt="" style="width:100%">
   <h3></h3>
   <p></p>
+  <i class="fa fa-linkedin w3-hover-opacity"></i>
+
 </div>
 
 <!-- END MAIN -->
