--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
   <img src="/w3images/p3.jpg" alt="" style="width:100%">
   <h3></h3>
   <p></p>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-
+<a href="https://www.linkedin.com/in/jameswilliamdavis/" class="fa fa-linkedin">in</a>
 </div>
 
 <!-- END MAIN -->
