--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="content">
   <img src="/w3images/p3.jpg" alt="" style="width:100%">
   <h3></h3>
-  <p></p>
+  <p>Contact Me.</p>
 <a href="https://www.linkedin.com/in/jameswilliamdavis/" class="fa fa-linkedin">in</a>
 </div>
 
