--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <img src="/w3images/p3.jpg" alt="" style="width:100%">
   <h3></h3>
   <p>Contact Me.</p>
-<a href="https://www.linkedin.com/in/jameswilliamdavis/" class="fa fa-linkedin">in</a>
+<a href="https://www.linkedin.com/in/jameswilliamdavis/" class="fa fa-linkedin">LinkedIn</a>
 </div>
 
 <!-- END MAIN -->
