--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
 </div>
 
 <div class="content">
-  <img src="/w3images/p3.jpg" alt="" style="width:100%">
-  <h3></h3>
   <p>Contact Me.</p>
-<a href="https://www.linkedin.com/in/jameswilliamdavis/" class="fa fa-linkedin">LinkedIn</a>
+<a href="https://www.linkedin.com/in/jameswilliamdavis/" class="fa fa-linkedin">in</a>
 </div>
 
 <!-- END MAIN -->
