--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p>Contact Me.</p>
         <br>
 <a href="https://www.linkedin.com/in/jameswilliamdavis/" class="fa fa-linkedin">in</a>
-        <a href="mailto:jamesswd@gmail.com">Email</a>
+        <a href="mailto:jamesswd@gmail.com" class="fa fa-email">Email</a>
 </div>
 
 <!-- END MAIN -->
