--- a/womenparliament.html
+++ b/womenparliament.html
@@ -23,7 +23,7 @@
   </br>
 <div class="content">
         <h2>Year 2000 Spatial Distribution</h2>   
-  <img src="images/2000inter.png" alt="Year 2000 Spatial Distribution">
+  <img src="images/2000inter.png" width="100%" alt="Year 2000 Spatial Distribution">
   </div>
   </br>
 <div class="content">
