--- a/womenparliament.html
+++ b/womenparliament.html
@@ -28,7 +28,7 @@
   </br>
 <div class="content">
         <h2>Year 2020 Spatial Distribution</h2>   
-  <img src="images/2020inter.png" alt="Year 2020 Spatial Distribution">
+  <img src="images/2020inter.png" width="100%" alt="Year 2020 Spatial Distribution">
   </div>
 </br>
 
