--- a/researchproject.html
+++ b/researchproject.html
@@ -8,7 +8,7 @@
   <body>
  <h2>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h2>
  <div class="content">
- <p>Unfinished</p>
+ <p><img src="images/posterdp.png" alt="Project Poster" style="width:100%"></p>
   </div>
 
 </br>
