--- a/researchproject.html
+++ b/researchproject.html
@@ -8,7 +8,8 @@
   <body>
  <h2>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h2>
  <div class="content">
- <p><img src="images/posterdp.png" alt="Project Poster" style="width:100%"></p>
+   <p>Project Display Poster</p>
+  <img src="images/posterdp.png" alt="Project Poster" style="width:100%">
   </div>
 
 </br>
