--- a/researchproject.html
+++ b/researchproject.html
@@ -8,7 +8,7 @@
   <body>
  <h2>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h2>
  <div class="content">
-   <p>Project Display Poster</p>
+   <h3>Project Display Poster</h3>
   <img src="images/posterdp.png" alt="Project Poster" style="width:100%">
   </div>
 
