--- a/researchproject.html
+++ b/researchproject.html
@@ -11,7 +11,8 @@
    <h3>Project Display Poster</h3>
   <img src="images/posterdp.png" alt="Project Poster" style="width:100%">
   </div>
-
+</body
+ <footer>
 </br>
 <div>
 <a href="index.html" class="button">Back to Portfolio Page</a>
