--- a/womenparliament.html
+++ b/womenparliament.html
@@ -6,30 +6,45 @@
 
   </head>
   <body>
- <h2>Proportion of Women in National Parliaments from 2000 to 2020</h2>
+<div class="row">
+  
+   <div class="column">
+    <h2>Proportion of Women in National Parliaments from 2000 to 2020</h2>
  <div class="content">
  <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/5a167c2f-a5dc-4cf6-9e58-19427399e2c7/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </div>
-    </br>
-   <h2>Overall Change Bewteen 2000 and 2020</h2>
-  <div class="content">
-<iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/21be8a68-52a6-473a-bce3-e36675506b69/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </div>
-   </br>
-   <h2>Spatial Distribution of 2000 and 2020</h2>
-  <div class="content">
+        
+  <div class="column">
+    <div class="content">
+       <h2>Overall Change Bewteen 2000 and 2020</h2>
+  <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/21be8a68-52a6-473a-bce3-e36675506b69/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
+  </div>
+      </div>
+
+  <div class="column">
+    <div class="content">
+         <h2>Spatial Distribution of 2000 and 2020</h2>
 <iframe width="100%" height="520" frameborder="0" src="https://jamesswd.carto.com/builder/2eea83c2-72ea-4473-81d3-646719936314/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-</div>
-  </br>
-<div class="content">
-        <h2>Year 2000 Spatial Distribution</h2>   
+
+  </div>
+  </div>
+    
+  <div class="column">
+    <div class="content">
+      <h2>Year 2000 Spatial Distribution</h2>   
   <img src="images/2000inter.png" width="100%" alt="Year 2000 Spatial Distribution">
   </div>
-  </br>
-<div class="content">
-        <h2>Year 2020 Spatial Distribution</h2>   
+  </div>
+  
+  <div class="column">
+    <div class="content">
+       <h2>Year 2020 Spatial Distribution</h2>   
   <img src="images/2020inter.png" width="100%" alt="Year 2020 Spatial Distribution">
   </div>
+  </div>
+</div>
 </br>
 
 <div class="content">    
