--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
     </div>
   </div>
   
+   <div class="column">
+    <div class="content">
+      <a href="https://www.arcgis.com/apps/MapTour/index.html?appid=3ef7c1f2ddff4df9b6a6a7bbf16f4bb8#map"><img src="James-Cook-Pacific-Voyages.jpg" alt="James Cook's Pacific Voyages, Image from Britannica.com" style="width:100%"></a>
+      <h3>The Life of Captain James Cook</h3>
+      <p>Group Project to create a Story Map of the book; "The Life of Captain James Cook" by Arthur Kitson. The project utlised ESRI Storymap. Please click the image to go to the Story Map</p>
+    </div>
+  </div>
   
 <!-- END GRID -->
 </div>
