--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
   <div class="column">
     <div class="content">
-      <a href="tableaufootball.html"><img src="images/footballvic.jpng" alt="Football in Victoria" style="width:100%"></a>
+      <a href="tableaufootball.html"><img src="images/footballvic.png" alt="Football in Victoria" style="width:100%"></a>
       <h3>Football in Victoria</h3>
       <p>Exploring Tableau by creating a data visualisation of Football in Victoria in 2021 with some history about the league and the cup.</p>
     </div>
