--- a/index.html
+++ b/index.html
@@ -53,7 +53,34 @@
     </div>
   </div>   
         
-        
+        <div class="column">
+    <div class="content">
+    <a href="researchproject.html"><img src="images/posterdp.png" alt="Project Poster" style="width:100%"></a>
+      <h3>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h3>
+      <p>University honours project using RapidEye satellite imagery to create a land cover classification and burrow habitat suitability model.</p>
+    </div>
+  </div>
+<div class="column">
+    <div class="content">
+    <a href="researchproject.html"><img src="images/posterdp.png" alt="Project Poster" style="width:100%"></a>
+      <h3>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h3>
+      <p>University honours project using RapidEye satellite imagery to create a land cover classification and burrow habitat suitability model.</p>
+    </div>
+  </div>
+<div class="column">
+    <div class="content">
+    <a href="researchproject.html"><img src="images/posterdp.png" alt="Project Poster" style="width:100%"></a>
+      <h3>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h3>
+      <p>University honours project using RapidEye satellite imagery to create a land cover classification and burrow habitat suitability model.</p>
+    </div>
+  </div>
+<div class="column">
+    <div class="content">
+    <a href="researchproject.html"><img src="images/posterdp.png" alt="Project Poster" style="width:100%"></a>
+      <h3>Using Remote Sensing to Map Flesh-footed Shearwater Habitat in the Recherche Archipelago</h3>
+      <p>University honours project using RapidEye satellite imagery to create a land cover classification and burrow habitat suitability model.</p>
+    </div>
+  </div>  
   
 <!-- END GRID -->
 </div>
