--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
       <p>Exploring Tableau by creating a data visualisation of Football in Victoria in 2021 with some history about the league and the cup.</p>
     </div>
   </div>   
+
+</div>
         
+<div class="row">
       
   
 <!-- END GRID -->
